fix(ui): fix layout issues

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -4,4 +4,7 @@
   margin: 0;
   padding: 0;
   font-weight: normal;
+  display: grid;
+  place-items: center;
+  height: 100%;
 }
